# tts-cli

./: .gitignore  README.md  pyproject.toml  setup.py
tts_cli/: __init__.py  main.py
