[project]
name = "tts_cli"
version = "0.4.0"
description = "CLI to convert text files to voice audio using Cloud Speech services"
# Added author and repository information
authors = [
  {name = "ShinChven", email = "shinchven@gmail.com"}
]
urls = {"Repository" = "https://github.com/ShinChven/tts-cli.git"}
license = { file = "LICENSE" }
dependencies = [
  "azure-cognitiveservices-speech",
  "PyPDF2",
  "python-docx",
  "python-pptx",
  "requests",
  "beautifulsoup4",
  "google-cloud-texttospeech"
]

[project.scripts]
tts = "tts_cli.main:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
